--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,27 +6,27 @@ services:
     ports:
       - "1883:1883"
     volumes:
-      - ./mosquitto/config:/mosquitto/config
-      - ./mosquitto/data:/mosquitto/data
-      - ./mosquitto/log:/mosquitto/log
+      - ./docker/mosquitto/config:/mosquitto/config
+      - ./docker/mosquitto/data:/mosquitto/data
+      - ./docker/mosquitto/log:/mosquitto/log
 
   node-red:
     image: nodered/node-red
     ports:
       - "1880:1880"
     volumes:
-      - ./node-red:/data
+      - ./docker/node-red:/data
 
   grafana:
     image: grafana/grafana
     ports:
       - "3000:3000"
     volumes:
-      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
-      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./docker/grafana/grafana.ini:/etc/grafana/grafana.ini
+      - ./docker/grafana/provisioning:/etc/grafana/provisioning
 
   receiver:
-    build: ./receiver
+    build: ./docker/receiver
     devices:
       - "${TTY_DEVICE:-/dev/ttyUSB0}:${TTY_DEVICE:-/dev/ttyUSB0}"
     environment:
@@ -35,7 +35,7 @@ services:
       - mosquitto
 
   usb-daemon:
-    build: ./usb-daemon
+    build: ./docker/usb-daemon
     devices:
       - "${TTY_DEVICE:-/dev/ttyUSB0}:${TTY_DEVICE:-/dev/ttyUSB0}"
     environment:
@@ -44,7 +44,7 @@ services:
       - mosquitto
 
   reader:
-    build: ./reader
+    build: ./docker/reader
     depends_on:
       - mosquitto
 
@@ -53,11 +53,11 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./webserver:/usr/share/nginx/html
+      - ./docker/webserver:/usr/share/nginx/html
 
   esphome:
     image: esphome/esphome
     ports:
       - "6052:6052"
     volumes:
-      - ./esphome:/config
+      - ./docker/esphome:/config
