--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,13 +28,13 @@ services:
     volumes:
       - ./docker/node-red:/data
 
-  grafana:
-    image: grafana/grafana
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./docker/grafana/grafana.ini:/etc/grafana/grafana.ini
-      - ./docker/grafana/provisioning:/etc/grafana/provisioning
+#  grafana:
+#    image: grafana/grafana
+#    ports:
+#      - "3000:3000"
+#    volumes:
+#      - ./docker/grafana/grafana.ini:/etc/grafana/grafana.ini
+#      - ./docker/grafana/provisioning:/etc/grafana/provisioning
 
   receiver:
     build: ./docker/receiver
