--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,6 +65,21 @@ services:
       - "80:80"
     volumes:
       - ./docker/webserver:/usr/share/nginx/html
+      - ./docker/webserver/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - api
+
+  api:
+    build: ./docker/api
+    depends_on:
+      - mysql
+    environment:
+      - MYSQL_HOST=mysql
+      - MYSQL_USER=meshtastic
+      - MYSQL_PASSWORD=example_pw
+      - MYSQL_DATABASE=meshtastic
+    ports:
+      - "3001:3001"
 
   esphome:
     build: ./docker/esphome
