--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   mysql:
     image: mysql:8.0
     restart: always
+    hostname: mysql
     environment:
       MYSQL_ROOT_PASSWORD: example_root_pw
       MYSQL_DATABASE: meshtastic
