--- a/docker/esphome/esp-config/nodes/rpi_gateway.yaml
+++ b/docker/esphome/esp-config/nodes/rpi_gateway.yaml
@@ -1,5 +1,5 @@
 substitutions:
-  node_id: "node_id_placeholder"
+  node_id: "rpi_gateway"
   mqtt_broker: "mosquitto"
 
 esphome:
@@ -8,8 +8,8 @@ esphome:
   board: heltec_wifi_lora_32_V3
 
 wifi:
-  ssid: wifi_ssid
-  password: wifi_password
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
   ap:
     ssid: "Fallback-${node_id}"
     password: "fallback123"
