--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -88,3 +88,4 @@ services:
       - "6052:6052"
     volumes:
       - ./docker/esphome/esp-config:/config
+      - ./docker/esphome/my_components:/config/my_components
