--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -83,8 +83,12 @@ services:
       - "3001:3001"
 
   esphome:
-    build: ./docker/esphome
+    container_name: esphome
+    image: ghcr.io/esphome/esphome
+    privileged: true
     ports:
       - "6052:6052"
     volumes:
       - ./docker/esphome/esp-config:/config
+      - /etc/localtime:/etc/localtime:ro
+    restart: always
