--- a/docker/esphome/esp-config/rpi_gateway.yaml
+++ b/docker/esphome/esp-config/rpi_gateway.yaml
@@ -66,7 +66,7 @@ on_boot:
           lambda: 'return id(mac_str).c_str();'
 
 external_components:
-  - source: /config/my_components/web_mqtt_component.h
+  - source: /config/my_components
 
 custom_component:
   - lambda: |-
