--- a/docker/esphome/esp-config/secrets.yaml
+++ b/docker/esphome/esp-config/secrets.yaml
@@ -1,5 +1,6 @@
 ap_password: "secure_ap_pass"
 ota_password: "secure_ota_pass"
+api_encryption_key: "secure_api_encryption_key"
 
 wifi_ssid: "JouwSSID"
 wifi_password: "JouwWachtwoord"
