--- a/docker/esphome/esp-config/rpi_gateway.yaml
+++ b/docker/esphome/esp-config/rpi_gateway.yaml
@@ -4,8 +4,9 @@ substitutions:
 
 esphome:
   name: ${node_id}
-  platform: ESP32
-  board: heltec_wifi_lora_32_V3
+  board: esp32-s3-devkitc-1
+  framework:
+    type: arduino
 
 wifi:
   ssid: !secret wifi_ssid
@@ -14,11 +15,23 @@ wifi:
     ssid: "Fallback-${node_id}"
     password: "fallback123"
 
+# Enable logging
 logger:
+  hardware_uart: "UART0"
 
+# Enable Home Assistant API
 api:
+  encryption:
+    key: !secret api_encryption_key
 
 ota:
+  platform: esphome
+  password: !secret ota_password
+
+captive_portal:
+
+web_server:
+  local: true
 
 mqtt:
   broker: ${mqtt_broker}
@@ -31,6 +44,13 @@ globals:
   - id: latest_msg
     type: std::string
     initial_value: ''
+  - id: muon_cnt
+    type: int
+    initial_value: "1"
+  - id: background_cnt
+    type: int
+    initial_value: "1"
+
 
 i2c:
   sda: GPIO21
@@ -43,11 +63,17 @@ font:
 
 display:
   - platform: ssd1306_i2c
-    id: my_display
+    model: "SSD1306 128x64"
+    reset_pin: 21
+    i2c_id: bus_a
     address: 0x3C
+    # auto_clear_enabled: false
     lambda: |-
-      it.printf(0, 0, id(font12), "MAC:%s", id(mac_str).c_str());
-      it.printf(0, 16, id(font12), "%s", id(latest_msg).c_str());
+      it.print(0,  2, id(roboto_10), "Muons");
+      it.printf(0, 10, id(roboto_16), "%08d %5.1f", id(muon_cnt), id(muon_event_rate).state);
+      
+      it.print(0, 32, id(roboto_10), "Background");
+      it.printf(0, 40, id(roboto_16), "%08d %5.1f", id(background_cnt), id(background_event_rate).state);
 
 on_boot:
   priority: -10
@@ -72,3 +98,65 @@ custom_component:
   - lambda: |-
       auto web = new WebMqttComponent("${node_id}");
       App.register_component(web);
+
+script:
+  - id: trigger_muon
+    then:
+      - lambda: |-
+          // Add one to the global integer
+          id(muon_cnt) += 1;
+          // Force the sensor to publish a new state
+          //id(muon_event_rate).publish_state(id(muon_cnt));
+
+  - id: trigger_background
+    then:
+      - lambda: |-
+          // Add one to the global integer
+          id(background_cnt) += 1;
+          // Force the sensor to publish a new state
+          //id(background_event_rate).publish_state(id(background_cnt));
+
+sensor:
+  - platform: template
+    name: "Muon Counter"
+    id: muon_counter
+    # update_interval: never
+    update_interval: 1s
+    accuracy_decimals: 0
+    state_class: total_increasing
+    lambda: return id(muon_cnt);
+
+  - platform: pulse_meter
+    name: "Muon Event Rate"
+    id: muon_event_rate
+    pin: 
+      number: GPIO1
+      mode: input
+    on_value:
+      - script.execute:
+          id: trigger_muon
+    total:
+      name: Total Muons
+    timeout: 2s
+
+  - platform: template
+    name: "Background Counter"
+    id: background_counter
+    # update_interval: never
+    update_interval: 1s
+    accuracy_decimals: 0
+    state_class: total_increasing
+    lambda: return id(background_cnt);
+
+  - platform: pulse_meter
+    name: "Background Event Rate"
+    id: background_event_rate
+    pin: 
+      number: GPIO2
+      mode: input
+    on_value:
+      - script.execute:
+          id: trigger_background
+    total:
+      name: Total Background
+    timeout: 2s
