--- a/docker/esphome/esp-config/rpi_gateway.yaml
+++ b/docker/esphome/esp-config/rpi_gateway.yaml
@@ -33,6 +33,11 @@ captive_portal:
 web_server:
   local: true
 
+i2c:
+  - id: bus_a
+    sda: 17
+    scl: 18
+    
 mqtt:
   broker: ${mqtt_broker}
   discovery: false
