--- a/docker/mosquitto/config/mosquitto.conf
+++ b/docker/mosquitto/config/mosquitto.conf
@@ -15,7 +15,7 @@ log_type information
 
 # Default listener (MQTT)
 listener 1883
-allow_anonymous false
+allow_anonymous true
 password_file /mosquitto/config/passwords.txt
 
 # Optional: WebSockets support
