--- a/docker/mosquitto/config/mosquitto.conf
+++ b/docker/mosquitto/config/mosquitto.conf
@@ -14,8 +14,8 @@ log_type notice
 log_type information
 
 # Default listener (MQTT)
-listener 1883
 allow_anonymous true
+listener 1883 0.0.0.0
 password_file /mosquitto/config/passwords.txt
 
 # Optional: WebSockets support
