--- a/docker/esphome/esp-config/esp_node_3.yaml
+++ b/docker/esphome/esp-config/esp_node_3.yaml
@@ -46,7 +46,14 @@ display:
     i2c_id: bus_a
     address: 0x3C
     lambda: |-
-       it.print(4, 4, id(roboto_20), "Hello World!");
+      snprintf(mac, sizeof(mac), "%02X:%02X:%02X:%02X:%02X:%02X", 
+        (uint8_t)(ESP.getEfuseMac() >> 40),
+        (uint8_t)(ESP.getEfuseMac() >> 32),
+        (uint8_t)(ESP.getEfuseMac() >> 24),
+        (uint8_t)(ESP.getEfuseMac() >> 16),
+        (uint8_t)(ESP.getEfuseMac() >> 8),
+        (uint8_t)(ESP.getEfuseMac()));
+      it.print(4, 4, id(roboto_20), "Hello World! " + mac);
 
 font:
   - file: "gfonts://Roboto"
