--- a/docker/esphome/esp-config/esp_rpi_gateway.yaml
+++ b/docker/esphome/esp-config/esp_rpi_gateway.yaml
@@ -9,7 +9,8 @@ esphome:
             delay(100);
   includes:
     - my_components/web_lora_component/web_lora_component.h
-
+  libraries:
+    - "SPI"
 external_components:
   - source:
       type: local
