--- a/docker/esphome/esp-config/node_1.yaml
+++ b/docker/esphome/esp-config/node_1.yaml
@@ -49,6 +49,7 @@ display:
       it.printf(0, 20, id(font1), "Ontvangen:");
       it.printf(0, 40, id(font1), "%s", id(received_msg).c_str());
 
-# LoRaNode external component instance
-lora_node:
-  name: "Node 1"
+custom_component:
+  - lambda: |-
+      auto lora = new LoRaNode("Node 1");
+      return {lora};
