--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
-  mosquitto:
-    image: eclipse-mosquitto
-    ports:
-      - "1883:1883"
-    volumes:
-      - ./docker/mosquitto/config:/mosquitto/config
-      - ./docker/mosquitto/data:/mosquitto/data
-      - ./docker/mosquitto/log:/mosquitto/log
+#  mosquitto:
+#    image: eclipse-mosquitto
+#    ports:
+#      - "1883:1883"
+#    volumes:
+#      - ./docker/mosquitto/config:/mosquitto/config
+#      - ./docker/mosquitto/data:/mosquitto/data
+#      - ./docker/mosquitto/log:/mosquitto/log
 
   esphome:
     container_name: esphome
