--- a/docker/esphome/esp-config/node_2.yaml
+++ b/docker/esphome/esp-config/node_2.yaml
@@ -1,7 +1,15 @@
 esphome:
   name: heltec_node_2
-  includes:
-    - components/lora_node.h
+  libraries:
+    - "SPI"
+    - "Ticker"
+    - "SX126x-Arduino"
+    - "https://github.com/sandeepmistry/arduino-LoRa.git"
+    
+external_components:
+  - source:
+      type: local
+      path: /config/components
 
 esp32:
   board: heltec_wifi_lora_32_V3
@@ -38,15 +46,9 @@ display:
     i2c_id: bus_a
     address: 0x3C
     lambda: |-
-      it.printf(0, 0, id(font1), "Node 1");
+      it.printf(0, 0, id(font1), "Node 2");
       it.printf(0, 20, id(font1), "Ontvangen:");
       it.printf(0, 40, id(font1), "%s", id(received_msg).c_str());
 
-external_components:
-  - source:
-      type: local
-      path: components
-
-# LoRaNode external component instance
 lora_node:
   name: "Node 2"
