--- a/docker/esphome/esp-config/components/lora_node/component.yaml
+++ b/docker/esphome/esp-config/components/lora_node/component.yaml
@@ -1,4 +1,6 @@
-implementation: lora_node.h
-class:
-  name: LoRaNode
-  schema: CONFIG_SCHEMA
+files:
+  - lora_node.h
+classes:
+  - class: LoRaNode
+    name: lora_node
+    schema: CONFIG_SCHEMA
