--- a/docker/esphome/esp-config/lora_node_1.yaml
+++ b/docker/esphome/esp-config/lora_node_1.yaml
@@ -2,6 +2,8 @@ esphome:
   name: heltec-node-1
   libraries:
     - "SPI"
+    - "WIFI"
+    - "network"
     - "Ticker"
     - "SX126x-Arduino"
     - "https://github.com/sandeepmistry/arduino-LoRa.git"
