--- a/docker/esphome/esp-config/lora_node_1.yaml
+++ b/docker/esphome/esp-config/lora_node_1.yaml
@@ -19,6 +19,13 @@ esp32:
 
 logger:
 
+## WiFi configuration (Access Point only)
+wifi:
+  ap:
+    ssid: "meshtastic-node"
+    password: "meshpassword"
+  # No fallback, no scanning for networks
+
 spi:
   clk_pin: GPIO9
   mosi_pin: GPIO10
