--- a/docker/esphome/esp-config/heltec_hello_world.yaml
+++ b/docker/esphome/esp-config/heltec_hello_world.yaml
@@ -1,7 +1,10 @@
 esphome:
   name: heltec_hello_world
-  platform: ESP32
-  board: heltec_wifi_lora_32_v3
+
+esp32:
+  board: heltec_wifi_lora_32_V3
+  framework:
+    type: arduino
 
 # Enable logging
 logger:
