--- a/docker/esphome/esp-config/heltec_hello_world.yaml
+++ b/docker/esphome/esp-config/heltec_hello_world.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: heltec_hello_world
+  name: heltecHelloWorld
 
 esp32:
   board: heltec_wifi_lora_32_V3
@@ -12,13 +12,10 @@ logger:
 # Enable Home Assistant API
 api:
 
-# Enable OTA updates
-ota:
-
 # WiFi configuration
-#wifi:
-#  ssid: "revenberg"
-#  password: "your-PASSWORD"
+wifi:
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
 
   # Static IP configuration (optional)
 #  manual_ip:
@@ -45,10 +42,14 @@ display:
     model: "SSD1306 128x64"
     address: 0x3C
     lambda: |-
-      it.print(0, 0, id(font), "Hello World!");
+      it.print(0, 0, id(roboto_10), "Hello World!");
 
-# Font configuration
+## Fonts for OLED display
 font:
-  - file: "fonts/arial.ttf"
-    id: font
+  - file: "gfonts://Nova+Mono"
+    id: roboto_16
     size: 16
+  - file: "gfonts://Roboto"
+    id: roboto_10
+    size: 10
+
