--- a/docker/esphome/esp-config/heltec_hello_world_0.yaml
+++ b/docker/esphome/esp-config/heltec_hello_world_0.yaml
@@ -88,8 +88,56 @@ font:
     id: roboto_10
     size: 10
 
-sx1262_lorawan:
-  id: lorawan_1
-  device_eui: "{0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}"
-  app_eui:    "{0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}"
-  app_key:    "{0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}"
+# LoRaWAN Specific Oprions
+# Setting these will enable the LoRaWAN radio mode
+lorawan_sx126x:
+
+# # Interface to radio chip
+# pin_lora_reset: 12  # LoRa Reset
+# pin-lora_dio_1: 14  # LoRa DIO_1
+# pin_lora_busy:  13  # LoRa SPI Busy
+# pin_lora_nss:    8  # LoRa SPI CS (Chip Select)
+# pin_lora_sclk:   9  # LoRa SPI SCLK
+# pin_lora_miso:  11  # LoRa SPI MISO (Master In, Slave Out)
+# pin_lora_mosi:  10  # LoRa SPI MOSI (Master Out, Slave In)
+# radio_txen:     -1  # LoRa Antenna TX Enable, on some boards.
+# radio_rxen:     -1  # LoRa Antenna RX Enable, on some boards.
+
+  region: AU915
+#     # AS923
+#     # AU915
+#     # CN470
+#     # CN779
+#     # EU433
+#     # EU868
+#     # IN865
+#     # KR920
+#     # US915
+#     # AS923_2
+#     # AS923_3
+#     # AS923_4
+#     # RU864
+  subchannel: 2
+  device_type: CLASS_A
+#     # CLASS_B
+#     # CLASS_C
+
+  authentication: OTAA
+    # OTAA - Over the Air
+    # ABP - Activation by Personalization
+
+# device_eui: !secret lorawan_device_eui   # 8 bytes
+    # The Device EUI is unique to the device, It can be set here, or will be set
+    # using the WiFi MAC address, If it is set automatically, then this code
+    # won't need to be recompiled for every device.
+    
+  app_eui: !secret lorawan_join_eui    # 8 bytes     
+    # Also referred to as 'join_eui'
+
+    # The following is used for Over The Air Authentication (OTAA)
+  app_key:  !secret lorawan_app_key   # 16 bytes
+
+#   # The following is required for Activation By Personalization (ABP) - Untested
+#   nwks_key: "00000000000000000000000000000000"  # 16 bytes
+#   apps_key: "00000000000000000000000000000000"  # 16 bytes
+#   dev_addr: "00000000000000000000000000000000"  # 16 bytes
