--- a/docker/esphome/esp-config/secrets.yaml
+++ b/docker/esphome/esp-config/secrets.yaml
@@ -4,3 +4,8 @@ api_encryption_key: "u/u7lnY4zXz4M0VjbuYeU5c2tT55Guwi6dBXbPwUZ2I="
 
 wifi_ssid: "JouwSSID"
 wifi_password: "JouwWachtwoord"
+
+lorawan_app_eui: "0000000000000000"
+lorawan_app_key: "00000000000000000000000000000000"
+# lorawan_device_eui: "0000000000000000"
+lorawan_join_eui: "0000000000000000"
