--- a/docker/esphome/esp-config/heltec_hello_world_1.yaml
+++ b/docker/esphome/esp-config/heltec_hello_world_1.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: heltechelloworld_1
+  name: heltechelloworld-1
   on_boot:
     - priority: 1000
       then:
@@ -7,15 +7,18 @@ esphome:
             pinMode(36, OUTPUT);
             digitalWrite(36, LOW);
             delay(100);
-  includes:
-    - components/my_lorawan_component.h
-    - components/lorawan_secrets.h
   libraries:
     - "SPI"
     - "Ticker"
     - "SX126x-Arduino"
     - "ArduinoJson"
     - "CayenneLPP"
+
+external_components:
+  - source:
+      type: local
+      path: components 
+    components: ["lora_sx126x"]
 
 esp32:
   board: heltec_wifi_lora_32_V3
@@ -24,7 +27,8 @@ esp32:
 
 # Enable logging
 logger:
-  level: DEBUG
+  hardware_uart: "UART0"  # Heltec V3 boards
+  level: VERY_VERBOSE
   
 # WiFi configuration
 wifi:
@@ -88,8 +92,67 @@ font:
     id: roboto_10
     size: 10
 
-sx1262_lorawan:
-  id: lorawan_1
-  device_eui: "{0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}"
-  app_eui:    "{0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}"
-  app_key:    "{0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}"
+lora_sx126x:
+  rf_frequency: 868000000          # Manditory for user to set
+
+sensor:
+  - platform: lora_sx126x
+    id: LoraSX126Xrssi
+    name: LoraSX126Xrssi                 # Required for publishing into API and HA 
+
+#  - platform: lora_sx126x
+#    id: lorarssi
+#    name: lorarssi                 # Required for publishing into API and HA 
+
+text_sensor:
+  - platform: lora_sx126x
+    id: LoraSX126Xpkt
+    name: LoraSX126Xpkt
+
+  - platform: wifi_info
+    ip_address:
+      name: ESP IP Address
+  - platform: version
+    name: "ESPHome Version"
+  - platform: template
+    name: "Template Text Sensor"
+    lambda: |-
+      return {"Hello World 1"};
+    update_interval: 60s
+  - platform: lora_sx126x
+    id: packet_in
+    name: packet_in
+  
+binary_sensor:
+  - platform: gpio
+    pin: 5
+    id: trigger
+    name: "Trigger (In)"
+    on_press:
+      then:
+        - switch.turn_on: monitor_switch    
+    on_release:
+      then:
+        - switch.turn_off: monitor_switch
+
+output:
+  - platform: gpio
+    pin: 6
+    id: monitor
+  - platform: gpio
+    pin: 35
+    id: monitor_led
+    
+switch:
+  - platform: output
+    id: monitor_switch
+    name: "Monitor Output (Out)"
+    output:
+#     monitor
+      monitor_led
+
+button:
+  - platform: restart
+    name: "Restart"
+
+  
